--- a/config/.env
+++ b/config/.env
@@ -1,2 +1,2 @@
-MONGO_URL = mongodb+srv://venkateshveeramallu:venky@cluster0.rfbb8kd.mongodb.net/loginDB
+MONGO_URL = mongodb+srv://venkateshveeramallu:venky@cluster0.uqymemm.mongodb.net/usersDB
 PORT = 8080
